--- a/site/src/assets/css/variables.scss
+++ b/site/src/assets/css/variables.scss
@@ -39,6 +39,8 @@ $sm-content-width: 500px;
 $md-max-width: 900px;// }}}
 $md-content-width: 600px;// }}}
 
+$content-min-width: 295px;
+
 // FONT SIZING{{{
 $font-family: "Nunito";
 $font-weight-xbold: 900;
